# student-info-system

./: CMakeLists.txt  CONTRIBUTING.md  Dockerfile  INSTALL.md  MANUAL.md  README.md  docker-compose.yml  schema.sql  shema.sql
.github/workflows/: ci.yml
src/: main.cpp
